Opened 17 years ago

Closed 17 years ago

Last modified 17 years ago

#2274 closed bug (fixed)

The use of ETHER_DEBUG macro in etherpci.c produce warnings

Reported by: kaoutsis Owned by: axeld
Priority: normal Milestone: R1
Component: Drivers/Network Version: R1/pre-alpha1
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

Cc generated/objects/haiku/x86/release/add-ons/kernel/drivers/network/etherpci/etherpci.o src/add-ons/kernel/drivers/network/etherpci/etherpci.c: In function `open_hook': src/add-ons/kernel/drivers/network/etherpci/etherpci.c:1497: warning: unsigned int format, pointer arg (arg 3) src/add-ons/kernel/drivers/network/etherpci/etherpci.c: In function `close_hook': src/add-ons/kernel/drivers/network/etherpci/etherpci.c:1546: warning: unsigned int format, pointer arg (arg 2) src/add-ons/kernel/drivers/network/etherpci/etherpci.c: In function `free_hook': src/add-ons/kernel/drivers/network/etherpci/etherpci.c:1616: warning: char format, etherpci_private_t arg (arg 2) src/add-ons/kernel/drivers/network/etherpci/etherpci.c:1616: warning: too few arguments for format src/add-ons/kernel/drivers/network/etherpci/etherpci.c: In function `control_hook': src/add-ons/kernel/drivers/network/etherpci/etherpci.c:1709: warning: too few arguments for format

Change History (2)

comment:1 by axeld, 17 years ago

Resolution: fixed
Status: newclosed

Fixed in hrev25796.

in reply to:  1 comment:2 by kaoutsis, 17 years ago

Replying to axeld:

Fixed in hrev25796.

Thanks.

Note: See TracTickets for help on using tickets.