* Fixed warnings, and turned off debugging output. * This fixes bug #2274.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@25796 a95241bf-73f2-0310-859d-f6bbb57e9c96